Change 537 on 2000/06/08 by <gbarr@pobox.com> (Graham Barr)

	Release 0.19

Change 533 on 2000/05/31 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP
	- Reset hash iterator for each call

Change 532 on 2000/05/30 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP
	- Fix asn1 name from modifyDNRequest to modDNRequest

Change 529 on 2000/05/22 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP::Search
	- result code element changed name to resultCode during
	  change-over to Convert::ASN1

Change 527 on 2000/05/22 by <gbarr@pobox.com> (Graham Barr)

	Release 0.18

Change 526 on 2000/05/22 by <gbarr@pobox.com> (Graham Barr)

	Now passes -wc with 5.004, 5.005_03 and 5.6.0

Change 525 on 2000/05/22 by <gbarr@pobox.com> (Graham Barr)

	Bundle::Net::LDAP
	- Change Convert::ASN to Convert::ASN1

Change 522 on 2000/05/19 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP::Filter
	- Return an error when there are unmatched ()

Change 517 on 2000/05/15 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP::Search
	- fix bug in ->as_struct introduced by new code in Net::LDAP::Entry

Change 516 on 2000/05/12 by <gbarr@pobox.com> (Graham Barr)

	Release 0.17

Change 512 on 2000/05/09 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP
	- Change to use asn_read (needs patch to Convert::ASN::IO)

Change 511 on 2000/05/09 by <gbarr@pobox.com> (Graham Barr)

	Change email/url's to point to sourceforge

Change 507 on 2000/05/03 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP
	- Check return value of asn_recv for defined not truth
	  as on some systems the return value may be ''

Change 506 on 2000/05/03 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP::Schema (patch from Chris Ridd)
	- Fix sup to always be an array ref
	- add ->superclasses() method

Change 505 on 2000/05/03 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP
	- Fix bug in ->unbind() where $mesg was not being passed to _sendmsg()
	- Added debug values 4 and 8 to dump with asn_dump()

Change 496 on 2000/04/27 by <gbarr@pobox.com> (Graham Barr)
